feat: add agent action
